# Lab-7

./: CMakeLists.txt  Dockerfile  README.md  build_image.sh  interactive.sh
files/: mols.smi
include/: element_utils.h  molecule.h
molecule/src/: loadmols.rs  main.rs  molecule.rs
python/: bindings.cpp
scripts/: plot_centroids.py  smi_to_mol.py  test_bindings.py
src/: main.cpp  molecule.cpp
